tests/baselines/reference/classWithEmptyBody.errors.txt
classWithEmptyBody.ts(6,1): error TS2322: Type 'number' is not assignable to type 'C'.
classWithEmptyBody.ts(12,9): error TS2322: Type 'number' is not assignable to type 'D'.
classWithEmptyBody.ts(12,9): error TS2409: Return type of constructor signature must be assignable to the instance type of the class.
classWithEmptyBody.ts(18,1): error TS2322: Type 'number' is not assignable to type 'D'.


==== classWithEmptyBody.ts (4 errors) ====
    class C {
    }
    
    var c: C;
    var o: {} = c;
    c = 1;
    ~
!!! error TS2322: Type 'number' is not assignable to type 'C'.
    c = { foo: '' }
    c = () => { }
    
    class D {
        constructor() {
            return 1;
            ~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'D'.
            ~~~~~~
!!! error TS2409: Return type of constructor signature must be assignable to the instance type of the class.
        }
    }
    
    var d: D;
    var o: {} = d;
    d = 1;
    ~
!!! error TS2322: Type 'number' is not assignable to type 'D'.
    d = { foo: '' }
    d = () => { }